# gcp-summit-2026-demo

./: .antigravity_env  .dockerignore  .env.perf  .gitignore  .pre-commit-config.yaml  .tmp_logs.json  AGENTS.md  PERSONAS.md  README.md  analyze_schemas_coverage.py  audit.sh  audit_script.sh  audit_static.txt  audit_tests.txt  build_extraction_service.py  changelog.md  check_db.py  check_redis_index.py  clean.py  clean_error_prompts.py  clean_errors.py  clean_models.py  cloudbuild_tmp.yaml  cov_summary.txt  cv_pytest_out.txt  cv_storage_service_refactored.py  debug_prd_prompt.py  debug_test.py  debug_test_keys.py  docker-compose.yml  failed_tests.txt  fetch_logs.py  find_silent_errors.py  fix.py  fix_agents.py  fix_databases.py  fix_exception_handler.py  fix_memory.py  fix_ports_commands.py  get_coverage.sh  (+76 more)
agent_api/: .coverage  (+14 more)
agent_commons/: README.md  pyproject.toml
agent_commons/agent_commons/: __init__.py  circuit_breaker.py  exception_handler.py  finops.py  guardrails.py  jwt_middleware.py  mcp_client.py  mcp_proxy.py  metadata.py  prompt_loader.py  runner.py  schemas.py  session.py  ui_tools.py
agent_commons/agent_commons.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agent_commons/tests/: __init__.py  test_circuit_breaker_redis.py  test_exception_handler.py  test_finops.py  test_guardrail_ops_metrics.py  test_guardrails.py  test_mcp_client_propagation.py  test_mcp_pre_generation_guardrail.py  test_mcp_proxy.py  test_prompt_loader_cache.py  test_runner_display_type.py  test_runner_null_safety.py  test_runner_tool_budget.py  test_schemas.py  test_schemas_agent_response.py
drive_api/: Dockerfile  FILE_HASHES  HASH  README.md  conftest.py  cv_api.generate_taxonomy_tree.txt  database.py  drive_business_test.db  logger.py  main.py  mcp_app.py  mcp_server.py  output.txt  pyproject.toml  pytest.ini  pytest_output.txt  query_db.py  requirements.txt  run_test.py  spec.md  test.db  test_debug.py  test_dlq_router.py  test_folders.py  test_main.py  test_mcp_app.py  test_mcp_tools.py  test_zero_trust.py
drive_api/src/: auth.py  discovery_service.py  drive_service.py  google_auth.py  ingestion_service.py  models.py  redis_client.py  router.py  schemas.py
drive_api/tests/: test_discovery_service.py  test_discovery_service.py.orig  test_dlq.py  test_dlq_router.py  test_drive_business.py  test_drive_service_offboarding.py  test_files_router.py  test_folder_service.py  test_folders.py  test_folders_router.py  test_google_api_client.py  test_ingestion_kpi_service.py  test_ingestion_router.py  test_main.py  test_mcp_app.py  test_mcp_tools.py  test_router.py  test_schemas.py  test_tree_resolution.py  test_zero_trust.py
items_api/: .coverage  Dockerfile  FILE_HASHES  HASH  README.md  cache.py  conftest.py  database.py  items_test.db  logger.py  main.py  mcp_app.py  mcp_server.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  spec.md  test_delete_user_items.py  test_integration.py  test_main.py  test_mcp_tools.py
items_api/scripts/: cleanup_items.py
items_api/src/: auth.py
items_api/tests/: test_admin_router.py  test_categories_router.py  test_contract.py  test_crud_router_basic.py  test_crud_router_bulk.py  test_delete_user_items.py  test_edge_cases.py  test_integration.py  test_main.py  test_mcp_tools.py  test_outbound_propagation.py  test_search_router.py  test_zero_trust.py
items_api/tools/: categories.py  items.py
scripts/: README.md  _insert_ui_format_tests.py  a.txt  admin.py  admin_helpers.py  agent_prompt_tests.py  analytics_mcp_proxy.py  async_manage_env.sh  audit_templates.py  b.txt  backfill_missions.py  calibrate_rag.sh  cleanup_plural_duplicates.py  compare_runs.py  deploy.sh  destroy_old_cr.sh  fix_truncated_names.py  force_flush_queued.sh  force_requeue_processing.sh  generate_changelog.py  generate_fake_agencies.py  generate_fake_missions.py  generate_gcp_summit_data.py  generate_pipeline_docs.py  generate_readmes.py  generate_specs.py  get_rarest_competencies.py  init_pubsub_emulator.py  local_up.py  logger_config.py  mark_legacy_errors.py  mcp_cli.py  migrate_dockerfiles_uv.py  pyproject.toml  reindex_cv.py  requirements.txt  run_perf_test.sh  run_rag_eval.sh  run_tests.sh  seed_data.py  (+4 more)
scripts/audit/: audit_compliance.py  audit_dependencies.py  audit_frontend.py
shared/: FILE_HASHES  HASH  __init__.py  bulk_task_state.py  cache.py  database.py  exception_handler.py  fastapi_utils.py  mcp_server_utils.py  middlewares.py  observability.py  pyproject.toml  redis_state.py  semaphore_utils.py
shared/auth/: context.py  jwt.py
shared/schemas/: __init__.py  auth.py  cv_profiles.py  mcp.py  missions.py  pagination.py  staffing.py  users.py
shared/testing/: __init__.py  jwt_helpers.py  prompt_evaluator.py
(+1286 files in other folders)
