[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_commons"
version = "1.0.0"
description = "Shared ADK agent utilities for Zenika multi-agent platform"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.28.1",
    "google-genai>=1.0.0",
    "httpx>=0.25.0",
    "opentelemetry-api>=1.36.0",
    "pydantic>=2.0.0",
    "tenacity",
    "redis>=5.0.0",
    "prometheus-client",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_commons*"]
