[project]
name = "drive-api"
version = "v0.0.138"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn>=0.47.0",
    "prometheus-client>=0.17.0",
    "opentelemetry-api>=1.41.0,<2.0.0",
    "opentelemetry-sdk>=1.41.0,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0",
    "google-cloud-alloydb-connector[asyncpg]>=1.13.0",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.25.0",
    "redis>=5.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "google-genai>=2.0.0",
    "google-api-python-client>=2.150.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
    "python-json-logger>=2.0.7",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mcp[fastapi]>=1.27.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.41.0,<2.0.0",
    "opentelemetry-exporter-gcp-trace>=1.12.0",
    "opentelemetry-exporter-gcp-monitoring>=1.6.0a0",
    "opentelemetry-exporter-otlp-proto-http>=1.41.0,<2.0.0",
    "tenacity>=8.0.0,<10.0.0",
    "PyJWT>=2.12.0",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-redis",
    "google-cloud-pubsub>=2.38.0",
    "testcontainers[postgres]>=4.0.0",
    "grpcio>=1.70.0"
]
