[project]
name = "items-api"
version = "v0.0.79"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn>=0.47.0",
    "prometheus-client>=0.17.0",
    "opentelemetry-api>=1.41.0,<2.0.0",
    "opentelemetry-sdk>=1.41.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.41.0,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.25.0",
    "redis>=5.0.0",
    "mcp[fastapi]>=1.27.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "PyJWT>=2.12.0",
    "google-auth>=2.40.0",
    "requests>=2.31.0",
    "google-cloud-pubsub>=2.38.0",
    "python-json-logger>=2.0.7",
    "opentelemetry-exporter-otlp-proto-http>=1.41.0,<2.0.0",
    "google-cloud-alloydb-connector[asyncpg]>=1.13.0",
    "asyncpg>=0.29.0",
    "opentelemetry-exporter-gcp-trace>=1.12.0",
    "tenacity>=8.0.0,<10.0.0",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-redis",
    "fakeredis>=2.0.0",
    "testcontainers[postgres,redis]>=4.0.0"
]
