[project]
name = "scripts"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth>=2.20.0",
    "faker>=20.0.0",
    "google-genai>=1.73.0",
    "a2a-sdk>=0.3.26",
    "google-cloud-iamconnectorcredentials>=0.1.0",
    "testcontainers[postgres,redis]>=4.0.0",
    "psycopg2-binary>=2.9.0",
    "build>=1.0.0",
    "twine>=5.0.0"
]
