[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "zenika-shared-schemas"
version = "1.0.1"
description = "Shared Pydantic DTOs and ASGI middlewares for Zenika inter-service API contracts"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]
