[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "zenika-shared-schemas"
version = "1.1.16"
description = "Shared Pydantic DTOs and ASGI middlewares for Zenika inter-service API contracts"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "httpx>=0.24.0",
    "python-json-logger>=2.0.7",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "prometheus-fastapi-instrumentator>=6.0.0",
]

[tool.setuptools]
packages = ["shared", "shared.schemas", "shared.auth", "shared.tests"]

[tool.setuptools.package-dir]
"shared" = "."

[project.optional-dependencies]
exporters = [
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]
